--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -15,7 +15,7 @@ Getting things to work before trying to optimize the app is always a good approa
 
 \newpage
 
-> One of the really nice things about running your program frequently is that you get to see it running, which is fun, ans that's what programming is all about.
+> One of the really nice things about running your program frequently is that you get to see it running, which is fun, and that's what programming is all about.
 > 
 > _The Unicorn Project_ [@genekim2019]
 
@@ -105,7 +105,7 @@ This package includes a series of functions that generates random placeholders.
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements.
 If we run this code two times, we should get different results, as seen on Figure \@ref(fig:09-prototyping-5) and Figure \@ref(fig:09-prototyping-6).[^prototyping-1]
 
-[^prototyping-1]: Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
+[^prototyping-1]: Well, there is a probability that we will get the same plot twice, but that is the beauty of randomness.
 
 ```{r 09-prototyping-4}
 library(shinipsum)
