--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -380,7 +380,7 @@ These flags are available using the `{gargoyle}` [@R-gargoyle] package, that can
 
 ```{r 15-common-app-caveats-7, eval = FALSE}
 # CRAN version 
-install.pacakges("gargoyle")
+install.packages("gargoyle")
 # Dev version
 remotes::install_github("ColinFay/gargoyle")
 ```
