--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -86,7 +86,7 @@ The good news is that using the R package structure helps you leverage the commo
 
 [^structure-1]: `{roxygen2}` comes with a `@noRd` tag that prevents the documentation from being built.
     This allows you to still write the documentation using the same tags as the exported function, without the internal functions being documented in the end package.
-    For example, that is why, by default, the modules built with `{golem}` version \> 0.2.0 come with `@noRd`: you should document them, but chances are your do not need to export them.
+    For example, that is why, by default, the modules built with `{golem}` version \> 0.2.0 come with `@noRd`: you should document them, but chances are you do not need to export them.
 
 #### E. It's tested {.unnumbered}
 
