--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -16,7 +16,7 @@ But in a world where `{shiny}` applications are mostly created as a series of fi
 You probably haven't realized it yet, but if you have built a significant (in terms of size or complexity of the codebase) `{shiny}` application, chances are you have been using a package-like structure without knowing it.
 
 Think about your last `{shiny}` application, which was created as a single-file (`app.R`) or two-file app (`ui.R` and `server.R`).
-On top of these files, what do you needed to make it **a production-ready application**, and why is a package the perfect infrastructure?
+On top of these files, what did you need to make it **a production-ready application**, and why is a package the perfect infrastructure?
 
 #### A. It has metadata {.unnumbered}
 
