--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -949,7 +949,7 @@ Now that we have our `fileInput()` set, how do we read these data as fast as pos
 There are several options depending on the type of data you are reading.
 Here are some packages that can make the file reading faster:
 
--   For a tabular, flat dataset (typically csv, tsv, or text), `{vroom}` [@R-vroom] can read data at a 1.40 GB/sec/sec speed. The `fread()` function from `{data.table}` [@R-data.table] is also fast at reading delimited files.
+-   For a tabular, flat dataset (typically csv, tsv, or text), `{vroom}` [@R-vroom] can read data at a 1.40 GB/sec speed. The `fread()` function from `{data.table}` [@R-data.table] is also fast at reading delimited files.
 -   For JSON files, `{jsonlite}` [@jsonlite2014]. Or more recently, `{RcppSimdJSON}` [@R-RcppSimdJson], which is a binding to the `simdjson` C++ library.
 -   If you need to read Excel files inside your app, `{readxl}` [@R-readxl] offers a binding to the [`RapidXML`](http://rapidxml.sourceforge.net/) C++ library, which reads Excel files fast.
 -   Most files exported from statistical software (SAS, SPSS, etc.) can be read using either the `{foreign}` [@R-foreign] or `{haven}` [@R-haven] packages.
