--- a/index.Rmd
+++ b/index.Rmd
@@ -206,7 +206,7 @@ Function names are formatted in a typewriter font and followed by parentheses (e
 Larger code blocks are formatted in a typewriter font and have a gray backgroud, e.g.:  
 
 ```{r index-2, eval=FALSE}
-install.package("golem")
+install.packages("golem")
 ```
 
 When we describe a package that can be installed from GitHub, we use the `install_github()` function from the `{remotes}` [@R-remotes] package. 
