--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -96,7 +96,7 @@ We will argue in this book that not enough reactivity is better than too much re
 
 Another good example is `{shiny}`'s `dateRangeInput()` function.
 This function requires the user to choose a start date and an end date.
-However, the function allows the user to choose a start date which is before the end (that is the behavior of the JavaScript plugin used in `{shiny}` to create this input).
+However, the function allows the user to choose a start date which is after the end (that is the behavior of the JavaScript plugin used in `{shiny}` to create this input).
 But allowing this behavior leads to bugs, notably in a context of full reactivity.
 Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end.[^big-shiny-5]
 On one hand, that solution increases implementation complexity, while on the other hand, allowing this naive behavior requires the user to think carefully about what they are selecting, thus increasing the interface complexity.
