--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -88,7 +88,7 @@ Splitting a `{shiny}` project is made possible by following two methods:
 -   **Extract your core "non-reactive" functions, which we will also call the "business logic", and include them in external files**, so that you can work on these outside of the app.
     Working on independent functions to implement features will prevent you from relaunching the whole application every time you need to add something new.
 
--   **Split your app into `{shiny}` modules**, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.
+-   **Split your app into `{shiny}` modules**, so that your app can be thought of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.
 
 Figure \@ref(fig:02-planning-ahead-1) is, for example, a representation of a `{shiny}` application with modules and sub-modules.
 You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a `{shiny}` application with modules can be organized and split into smaller pieces that are all related to each other in a tree form.
