--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -204,7 +204,7 @@ The first is that the app is designed in such a way that there is no learning cu
 A self-explanatory app has a small learning curve, but it is designed in a way that will make the user understand it in a matter of seconds.
 
 Let's, for example, get back to our `{tidytuesday201942}` [@R-tidytuesday201942] application available at [connect.thinkr.fr/tidytuesday201942](https://connect.thinkr.fr/tidytuesday201942/).
-By itself, this application is not self-evident: you need to have a certain amount of of background knowledge before understanding what this application was designed for.
+By itself, this application is not self-evident: you need to have a certain amount of background knowledge before understanding what this application was designed for.
 For example, you might need to have a vague sense of what `tidytuesday` is.
 If you do not, you will have to read the home text, which will help you understand what this is.
 Then, if we have a look at the menu elements, we see that these are a series of functions from `{ggplot2}` [@R-ggplot2]: without any background about the package, you might find it difficult to understand what this app actually does.
