Minor corrections to Chapter 1

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -420,7 +420,7 @@ But that is just at a local level, and it can be a suboptimal option: having a v
 In the end of the day, splitting into smaller functions is not a magic solution because:
 
 -  the global complexity of the app is not lowered by splitting things into pieces (just local complexity) and
--  The deeper the call stack, the harder it can be to debug.
+-  the deeper the call stack, the harder it can be to debug.
 
 #### C. Other measures for code complexity {.unnumbered}
 
@@ -600,4 +600,4 @@ Once the app is out, it is successful if it can **exist in the long run, with al
 And this, again, is hard to do without effective planning and efficient engineering.
 
 [^big-shiny-12]: In fact, this new person might simply be you, a month from now.
-    And *"You'll be there in the future too, maintaining code you may have half forgotten under the press of more recent projects. When you design for the future, the sanity you save may be your own.* [@ericraymond2003].
+    And *"You'll be there in the future too, maintaining code you may have half forgotten under the press of more recent projects. When you design for the future, the sanity you save may be your own."* [@ericraymond2003].
