fixed typo in 04-golem.Rmd

--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -133,7 +133,7 @@ If you want to learn more about these files, here are some resources you can ref
 ### R/
 
 The `R/` folder is **the standard folder where you will store all your app functions**.
-When you start your project with `{golem}`, this folder is pre-populated with three `.R` files: `app_config.R`, `app_server.R`, `app_ui.R` and `run_app.R`.
+When you start your project with `{golem}`, this folder is pre-populated with four `.R` files: `app_config.R`, `app_server.R`, `app_ui.R` and `run_app.R`.
 
 During the process of building your application, all the core functionalities of your app will be stored in this `R/` directory, which is the standard way to store functions when using the R package framework.
 Note that these files are the "core" features of your application itself, and that other .R files also exists.
